--- a/style.css
+++ b/style.css
@@ -5,29 +5,41 @@ body {
 }
 
 #modal {
-    height: 450px;
+    height: 550px;
     width: 700px;
-    margin-top: 100px;
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto;
+    margin: auto;
+    margin-top: 50px;
     opacity: 90%;
     border-radius: 30px;
     background-color: azure;
-    padding: 50px 30px 10px 30px;
+    padding: 30px 30px 10px 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+#heading{
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+#heading h1{
+    margin: inherit;
 }
 
 .flex-container {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .flex-item {
     display: block;
     width: 50%;
-    padding-left: 10px;
-
-
 }
 
 .field-box {
@@ -128,4 +140,27 @@ input[type=button]:hover {
     display: flex;
     margin-top: 10px;
     flex-direction: column;
+}
+
+#prediction-box{
+    display: flex;
+    flex-direction: row;
+    height: 80px;
+    width: 300px;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: aliceblue;
+    margin: auto;
+}
+
+#saved-results-box{
+    display: flex;
+    flex-direction: row;
+    height: 80px;
+    width: 300px;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: aliceblue;
+    margin: auto;
+    margin-top: 10px;
 }
