--- a/style.css
+++ b/style.css
@@ -155,12 +155,15 @@ input[type=button]:hover {
 
 #saved-results-box{
     display: flex;
-    flex-direction: row;
-    height: 80px;
+    height: 40px;
     width: 300px;
     border-radius: 10px;
     border: 1px solid black;
     background-color: aliceblue;
     margin: auto;
-    margin-top: 10px;
+}
+
+
+#saved-result-heading{
+    float: left;
 }
