--- a/style.css
+++ b/style.css
@@ -187,3 +187,22 @@ input[type=button]:hover {
     background-color: red;
     color: white;
 }
+
+
+.error-box{
+    display: block;
+    background-color: rgb(250, 210, 217);
+    border:2px solid rgb(255, 56, 56);
+    border-radius: 8px;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+.info-box{
+    display: block;
+    background-color: rgb(170, 250, 167);
+    border:2px solid rgb(56, 255, 73);
+    border-radius: 8px;
+    padding: 10px;
+    margin-top: 20px;
+}
