--- a/style.css
+++ b/style.css
@@ -145,12 +145,14 @@ input[type=button]:hover {
 #prediction-box {
     display: flex;
     flex-direction: row;
-    height: 80px;
     width: 300px;
+    height: 100px;
     border-radius: 10px;
     border: 1px solid black;
     background-color: aliceblue;
     margin: auto;
+    justify-content: space-between;
+    padding: 20px;
 }
 
 #saved-results-box {
@@ -205,4 +207,9 @@ input[type=button]:hover {
     border-radius: 8px;
     padding: 10px;
     margin-top: 20px;
+}
+
+#result-gender{
+    font-size: 20px;
+    font-weight:bold;
 }
